# tool-ai-document-translator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GAPS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-lock.txt  requirements.txt  roadmap_phased_implementation_db401353.plan.md
.github/: dependabot.yml
.github/workflows/: docker.yml  extract-liteparse.yml  release.yml  test.yml
docs/: extract-backend-routing.md
docs/integration/: Docker.md  Laravel.md
scripts/: release.py
src/document_translator/: __init__.py  __main__.py  cli.py  errors.py  models.py  pipeline.py  project_root.py  types.py
src/document_translator/config/: __init__.py  defaults.py  formats.py  languages.py  llms.py  settings.py
src/document_translator/detect/: ai.py  language.py  legal.py
src/document_translator/export/: combine.py  converter.py  pandoc.py  pdf.py  translation-rtl.css  translation.css
src/document_translator/extract/: common.py  debug.py  docx.py  epub.py  html.py  legacy_doc.py  ocr_http.py  pdf.py  rtf.py
src/document_translator/lib/: job_control.py  preflight.py  validation.py  webhook.py
src/document_translator/observability/: __init__.py  context.py  listeners.py  logging_setup.py  sentry_scrub.py  sentry_setup.py
src/document_translator/reconcile/: __init__.py  (+3 more)
tests/: conftest.py  extract_golden.py  test_analyze.py  test_anthropic_client.py  test_checkpoint.py  test_checkpoint_resume.py  test_chunker.py  test_cli.py  test_cli_integration.py  test_combine.py  test_compare.py  test_contract.py  test_cover.py  test_cursor_client.py  test_detect_language.py  test_detect_legal.py  test_errors.py  test_export.py  test_export_converter.py  test_export_formats.py  test_export_pandoc.py  test_extract.py  test_extract_backends.py  test_extract_eval.py  test_extract_formats.py  test_extract_regression.py  test_extract_sidecars.py  test_glossary.py  test_google_client.py  test_job_timeout.py  test_job_timeout_config.py  test_languages.py  test_legacy_doc.py  test_llm_factory.py  test_llm_usage.py  test_llms.py  test_models.py  test_observability.py  test_ocr_http.py  test_openai_client.py  (+16 more)
tools/extract-eval/: README.md
tools/extract_eval/: README.md  __init__.py  __main__.py  benchmark.py  golden.py  qa.py  report.py
(+37 files in other folders)
