[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-translator"
version = "0.1.0"
description = "AI document translation pipeline with dual-pass verification"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.24,<2",
    "striprtf>=0.0.26,<1",
    "weasyprint>=62,<67",
    "mammoth>=1.8,<2",
    "markdownify>=0.13,<1",
    "ebooklib>=0.18,<1",
    "langdetect>=1.0.9,<2",
    "rapidfuzz>=3.9,<4",
    "cursor-sdk>=0.1,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
monitoring = ["sentry-sdk>=2.0"]
extract-liteparse = ["liteparse>=2.0"]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.8",
  "pip-audit>=2",
  "openai>=1.0",
  "anthropic>=0.40",
  "google-genai>=1.0",
]

[project.scripts]
document-translator = "document_translator.cli:main"

[project.urls]
Homepage = "https://github.com/AragusNZ/tool-ai-document-translator"
Repository = "https://github.com/AragusNZ/tool-ai-document-translator"
Changelog = "https://github.com/AragusNZ/tool-ai-document-translator/blob/main/CHANGELOG.md"
Issues = "https://github.com/AragusNZ/tool-ai-document-translator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra --strict-markers"
markers = [
  "integration: full pipeline or multi-module tests",
  "requires_pandoc: needs pandoc on PATH",
  "requires_weasyprint: needs weasyprint working",
  "requires_tesseract: needs tesseract-ocr on PATH",
  "requires_liteparse: needs liteparse optional extra installed",
]

[tool.coverage.run]
source = ["document_translator"]
branch = true
omit = ["document_translator/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042"]
